feat: add simple consumer

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <artifactId>kafka-avro-serializer</artifactId>
       <version>7.7.7</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20251224</version>
+    </dependency>
   </dependencies>
 
   <build>
